Finalizada la cabecera con diesño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                The Dev Sax Guy Blog <span id="tagline">Un blog chido</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
