Agregado el contenido adicional del blog y nueva tipografia de prueba

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,8 @@
         <div id="container">
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicr las cosas increibles que se pueden hacer con ramas</p>
+                <p>Y este es el parrafo de inicio donde vamos a explicr las cosas increibles que se pueden hacer con ramas.</p>
+                <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Exepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora.</p>
             </div>
         </div>
 
