Añadir el titulo al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Titulo del post</title>
+        <title>Bienvenidos al hyperblog</title>
         <link rel="stylesheet" href="css/styles.css"/>
     </head>
     <body>
