--- a/blogpost.html
+++ b/blogpost.html
@@ -1,17 +1,18 @@
 <html>
     <head>
-        <title>Titulo del post</title>
+        <title>Bienvenidos al hyperblog</title>
         <link rel="stylesheet" href="css/styles.css"/>
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
-                The Dev Sax Guy Blog <span id="tagline">Un blog bastante cool</span>
+               <img id="logo" src="images/sax.png"/> The Dev Sax Guy Blog <span id="tagline">Un blog bastante cool</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicr las cosas increibles que se pueden hacer con ramas.</p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Exepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora.</p>
+                <p>Sucribete y dale like</p>
             </div>
         </div>
 
