--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,10 @@
                 <p>Y este es el parrafo de inicio donde vamos a explicr las cosas increibles que se pueden hacer con ramas.</p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Exepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora.</p>
             </div>
+            <div id="footer">
+                Hecho con amor desde México
+            </div>
         </div>
-
+       
     </body>
 </html>
