Agregue una imagen y un git ignore

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicr las cosas incre&iacute;bles que se pueden hacer con ramas.</p>
+                <p id ="me"><img src="images/me.jpeg" /></p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Exepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres... Por ahora.</p>
                 <p>Sucribete y dale like</p>
             </div>
